Increase relevance of randomly generated quizzes
